--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,7 +66,6 @@ p {
   padding-right: 2.6rem;
   padding-top: 2.9rem;
   width: 120rem;
-  z-index: -100;
 }
 
 .right-container {
